# Fast-GPTQ

./: .clangd  CMakeLists.txt  compile_commands.json  llama.py  model.py  test.ipynb  test.py
.cache/clangd/index/: kernel.cu.A2436F5ABC897493.idx  kernel.cuh.7915CEEB9D4F0EEF.idx  main.cpp.A4C9D334B0D97B1F.idx  quant_cuda_kernel.cuh.45664657D9A7A835.idx
kernel/: kernel.cu  kernel.cuh  kernel_pybind.cpp  main.cpp
kernel/old_kernel/: quant_cuda_kernel.cu  quant_cuda_kernel.cuh  quant_cuda_pybind.cpp
scripts/: clear.sh  cmake.sh
